--- a/test/index.html
+++ b/test/index.html
@@ -9,7 +9,7 @@
       <button data-open=".modal2">2</button>
       <button tabindex="-2">tabindex=-2</button>
       <button tabindex=" -1">tabindex= -1</button>
-      <button data-open=".modal3">dialog modal</button>
+      <button data-open=".modal3" data-role="dialog">dialog modal</button>
 
       <div class="modal modal1">
         <button class="close">Close</button>
@@ -47,17 +47,16 @@
     <!-- <dialog class="modal3"> -->
       <div class="modal modal3">
         <button class="close">Close</button>
-        <h2>Modal 3</h2>
+        <h2 data-label>Modal 3</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates alias consequatur iusto odit quod quia, maiores, accusantium pariatur, dolores accusamus rerum ad, dolorum atque earum. Itaque dolorum dolores consequuntur laboriosam.</p>
-        <button data-open="dialog.modal4">To modal 4 </button>
-        <input autofocus="" name="lastname" />
+        <button data-open=".modal4" data-role="dialog">To modal 4 </button>
       </div>
     <!-- </dialog> -->
 
-    <dialog class="modal4">
-      <div class="modal">
+    <!-- <dialog class="modal4"> -->
+      <div class="modal modal4">
         <button class="close">Close</button>
-        <h2>Modal 4</h2>
+        <h2 data-label>Modal 4</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non reiciendis sed doloremque est animi! Cumque beatae ut voluptatibus ducimus hic minima accusamus explicabo repellendus officiis rerum ullam, molestias eos enim?</p>
         <form>
           <fieldset>
@@ -79,79 +78,13 @@
         <button>1</button>
         <button>2</button>
       </div>
-    </dialog>
+    <!-- </dialog> -->
 
-    <script src="/modal-o.js"></script>
+    <script src="/modal.js"></script>
     <script>
-      /*function handleEvent( e ){
-        var btn = e.target,
-            selector = e.target.dataset.open,
-            modal = document.querySelector( selector );
-
-        var closeModal = function( currentModal ){
-          currentModal.removeEventListener( 'cancel', onclose );
-          currentModal.removeEventListener( 'click', onclick );
-
-          currentModal.classList.add( 'out' );
-
-          window.setTimeout( function(){
-            currentModal.close();
-          }, 300 );
-        }
-
-        var onclose = function( e ){
-          e.preventDefault();
-
-          closeModal( e.target );
-        }
-
-        if( modal.nodeName === 'DIALOG'  ){
-          console.log( modal ),
-
-          modal.classList.add( 'out' );
-
-          modal.showModal();
-
-          modal.addEventListener( 'cancel', onclose );
-
-          window.requestAnimationFrame( function(){
-            modal.classList.remove( 'out' );
-          } );
-          return;
-        }
-
-        if( !btn.modal ){
-          btn.modal = new window.Modal({
-            opener: btn,
-            dom: modal,
-          //html: string from ajax call
-            tagName: 'section',
-            className: 'modal-wrapper',
-            closeSelector: '.close',
-            onClose: function(){
-              btn.modal.el.classList.add( 'out' );
-              window.setTimeout( function(){
-                document.body.removeChild( btn.modal.el );
-              }, 300 );
-            }
-          });
-        }
-
-        btn.modal.el.style.display = 'none';
-        btn.modal.el.classList.add( 'out' );
-
-        btn.modal.el.style.display = '';
-        btn.modal.show( document.body );
-
-        window.requestAnimationFrame( function(){
-          btn.modal.el.classList.remove( 'out' );
-        } );
-
-      }*/
-
       function handleEvent( e ){
         var btn = e.target,
-            selector = e.target.dataset.open,
+            selector = e.target.getAttribute( 'data-open' ),
             modal = document.querySelector( selector );
 
         if( modal && 'DIALOG' === modal.nodeName ){
@@ -167,7 +100,7 @@
             tagName: 'section',
             className: 'modal-wrapper',
             closeSelector: '.close',
-            role: selector.indexOf( 'modal3' ) !== -1 ? 'dialog': null
+            role: btn.getAttribute( 'data-role' )
           } );
         }
         else{
