Added basic tests for dialog modal

--- a/test/index.html
+++ b/test/index.html
@@ -25,6 +25,9 @@
           <button data-open=".modal4" data-role="dialog">Modale avec un role dialog</button>
         </li>
         <li>
+          <button data-open=".modal6" data-role="dialog">Modale avec un role dialog sans élément interactif</button>
+        </li>
+        <li>
           <button disabled>Bouton désactivé</button>
         </li>
       </ul>
@@ -70,12 +73,12 @@
 
       <div class="modal modal2">
         <button class="close">Close</button>
-        <h2>Modal 1</h2>
+        <h2>Modal 2</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non reiciendis sed doloremque est animi! Cumque beatae ut voluptatibus ducimus hic minima accusamus explicabo repellendus officiis rerum ullam, molestias eos enim?</p>
       </div>
 
       <div class="modal modal3">
-        <h2>Modal 2</h2>
+        <h2>Modal 3</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non reiciendis sed doloremque est animi! Cumque beatae ut voluptatibus ducimus hic minima accusamus explicabo repellendus officiis rerum ullam, molestias eos enim?</p>
         <form>
           <fieldset>
@@ -99,19 +102,19 @@
       </div>
     </div>
 
-    <!-- <dialog class="modal3"> -->
+    <!-- <dialog class="modal4"> -->
       <div class="modal modal4">
         <button class="close">Close</button>
-        <h2 data-label>Modal 3</h2>
+        <h2 data-label>Modal 4</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates alias consequatur iusto odit quod quia, maiores, accusantium pariatur, dolores accusamus rerum ad, dolorum atque earum. Itaque dolorum dolores consequuntur laboriosam.</p>
-        <button data-open=".modal5" data-role="dialog">To modal 4 </button>
+        <button data-open=".modal5" data-role="dialog">To modal 5</button>
       </div>
     <!-- </dialog> -->
 
-    <!-- <dialog class="modal4"> -->
+    <!-- <dialog class="modal5"> -->
       <div class="modal modal5">
         <button class="close">Close</button>
-        <h2 data-label>Modal 4</h2>
+        <h2 data-label>Modal 5</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non reiciendis sed doloremque est animi! Cumque beatae ut voluptatibus ducimus hic minima accusamus explicabo repellendus officiis rerum ullam, molestias eos enim?</p>
         <form>
           <fieldset>
@@ -132,6 +135,14 @@
         </form>
         <button>1</button>
         <button>2</button>
+      </div>
+    <!-- </dialog> -->
+
+    <!-- <dialog class="modal6"> -->
+      <div class="modal modal6">
+        <button class="close">Close</button>
+        <h2 data-label>Modal 6</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates alias consequatur iusto odit quod quia, maiores, accusantium pariatur, dolores accusamus rerum ad, dolorum atque earum. Itaque dolorum dolores consequuntur laboriosam.</p>
       </div>
     <!-- </dialog> -->
 
