Full test suite for dialog modal

--- a/test/index.html
+++ b/test/index.html
@@ -34,6 +34,9 @@
           <button data-open=".modal8" data-role="dialog">Modale avec un role dialog, sans titre et sans label en paramètre (erreur attendue)</button>
         </li>
         <li>
+          <button data-open=".modal9" data-role="dialog">Modale avec un role dialog, sans bouton de fermeture</button>
+        </li>
+        <li>
           <button disabled>Bouton désactivé</button>
         </li>
       </ul>
@@ -159,6 +162,11 @@
 
     <div class="modal modal8">
       <button class="close">Close</button>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates alias consequatur iusto odit quod quia, maiores, accusantium pariatur, dolores accusamus rerum ad, dolorum atque earum. Itaque dolorum dolores consequuntur laboriosam.</p>
+    </div>
+
+    <div class="modal modal9">
+      <h2 data-label>Modal 9</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates alias consequatur iusto odit quod quia, maiores, accusantium pariatur, dolores accusamus rerum ad, dolorum atque earum. Itaque dolorum dolores consequuntur laboriosam.</p>
     </div>
 
