--- a/test/index.html
+++ b/test/index.html
@@ -182,7 +182,7 @@
     <script src="/modal.js"></script>
     <script>
       function transitionEnd( e ){
-        var modal = e.target.closest( '[aria-hidden]' )
+        var modal = e.target.closest( '[aria-hidden]' );
         if( e.propertyName === 'transform' ){
           modal.removeEventListener( 'transitionend', transitionEnd );
           modal.removeAttribute( 'style' );
@@ -200,27 +200,28 @@
             dom: modal,
           //html: string from ajax call
             tagName: 'section',
-            className: 'modal-wrapper',
+            className: 'modal-wrapper closed',
             closeSelector: '.close',
             role: btn.getAttribute( 'data-role' ),
             label: btn.getAttribute( 'data-label' )
           } );
+
+          btn.modal.on( 'hide', function(){
+            btn.modal.el.style.display = 'flex';
+            btn.modal.el.addEventListener( 'transitionend', transitionEnd );
+            btn.modal.el.classList.add( 'closed' );
+
+          } );
+
+          btn.modal.on( 'show', function(){
+            btn.modal.el.style.display = 'flex';
+            window.requestAnimationFrame( function(){
+              btn.modal.el.classList.remove( 'closed' );
+            } );
+          } );
         }
 
-        btn.modal.on( 'close', function(){
-          btn.modal.el.style.display = 'flex';
-          btn.modal.el.addEventListener( 'transitionend', transitionEnd );
-
-        } );
-
-        window.requestAnimationFrame( function(){
-          btn.modal.el.style.display = 'flex';
-
-          window.requestAnimationFrame( function(){
-
-            btn.modal.show();
-          } );
-        } );
+        btn.modal.show();
       }
 
       Array.prototype.forEach.call( document.querySelectorAll( '[data-open]' ), function( el ){
