Update code to ES6 with ES5 build from Chanel updated code

--- a/test/index.html
+++ b/test/index.html
@@ -67,7 +67,7 @@
           <label for="tabindex">negative tabindex</label>
           <input id="tabindex" type="text" tabindex="-1">
           <label for="textarea">Textarea</label>
-          <textarea id=textarea></textarea>
+          <textarea id="textarea"></textarea>
           <label for="textarea">Disabled select</label>
           <select id="select" disabled>
             <option>1</option>
