Update code for compiling and documentation

--- a/test/index.html
+++ b/test/index.html
@@ -179,7 +179,7 @@
       <button class="close">Ok</button>
     </div>
 
-    <script src="/modal.js"></script>
+    <script src="../dist/modal.js"></script>
     <script>
       function transitionEnd( e ){
         var modal = e.target.closest( '[aria-hidden]' );
