--- a/test/index.html
+++ b/test/index.html
@@ -48,16 +48,16 @@
       <p contenteditable>Content editable paragraph</p>
       <p>Non editable paragraph <a href="">with link</a></p>
 
-      <figure>
+      <!-- <figure>
         <img src="http://switch-company.com/medias/img/logo.png" usemap="#primary" />
         <map name="primary" id="primary">
           <area shape="circle" coords="94,66,27" href="another.html" />
         </map>
         <figcaption>Image map with href</figcaption>
-      </figure>
+      </figure> -->
 
-      <p>Iframe</p>
-      <iframe src="http://switch-company.com"></iframe>
+      <!-- <p>Iframe</p> -->
+      <!-- <iframe src="http://switch-company.com"></iframe> -->
 
       <form>
         <fieldset>
@@ -181,13 +181,13 @@
 
     <script src="../dist/modal.js"></script>
     <script>
-      function transitionEnd( e ){
-        var modal = e.target.closest( '[aria-hidden]' );
-        if( e.propertyName === 'transform' ){
-          modal.removeEventListener( 'transitionend', transitionEnd );
-          modal.removeAttribute( 'style' );
-        }
-      }
+      //function transitionEnd( e ){
+      //  var modal = e.target.closest( '[aria-hidden]' );
+      //  if( e.propertyName === 'transform' ){
+      //    modal.removeEventListener( 'transitionend', transitionEnd );
+      //    modal.removeAttribute( 'style' );
+      //  }
+      //}
 
       function handleEvent( e ){
         var btn = e.target,
@@ -200,25 +200,25 @@
             dom: modal,
           //html: string from ajax call
             tagName: 'section',
-            className: 'modal-wrapper closed',
+            className: 'modal-wrapper',
             closeSelector: '.close',
             role: btn.getAttribute( 'data-role' ),
             label: btn.getAttribute( 'data-label' )
           } );
 
-          btn.modal.on( 'hide', function(){
-            btn.modal.el.style.display = 'flex';
-            btn.modal.el.addEventListener( 'transitionend', transitionEnd );
-            btn.modal.el.classList.add( 'closed' );
+          //btn.modal.on( 'hide', function(){
+          //  btn.modal.el.style.display = 'flex';
+          //  btn.modal.el.addEventListener( 'transitionend', transitionEnd );
+          //  btn.modal.el.classList.add( 'closed' );
 
-          } );
+          //} );
 
-          btn.modal.on( 'show', function(){
-            btn.modal.el.style.display = 'flex';
-            window.requestAnimationFrame( function(){
-              btn.modal.el.classList.remove( 'closed' );
-            } );
-          } );
+          //btn.modal.on( 'show', function(){
+          //  btn.modal.el.style.display = 'flex';
+          //  window.requestAnimationFrame( function(){
+          //    btn.modal.el.classList.remove( 'closed' );
+          //  } );
+          //} );
         }
 
         btn.modal.show();
