Update server config

--- a/test/index.html
+++ b/test/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
     <div class="site-wrapper">
@@ -195,7 +195,7 @@
       <button class="close">Ok</button>
     </div>
 
-    <script src="../dist/overlay.js"></script>
+    <script src="/overlay.js"></script>
     <script>
       //function transitionEnd( e ){
       //  var modal = e.target.closest( '[aria-hidden]' );
